projects/vb6parse/snapshots/parsers/cst/declarations/variables/private_variable_object.snap
---
source: projects/vb6parse/tests/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_connection
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ADODB
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Connection
        - kind: Newline
          text: "\n"
